--- a/OrangeHrm/.classpath
+++ b/OrangeHrm/.classpath
@@ -22,5 +22,20 @@
 	<classpathentry kind="lib" path="H:/Testing/poi-bin-4.1.0-20190412/poi-4.1.0/poi-ooxml-4.1.0.jar"/>
 	<classpathentry kind="lib" path="H:/Testing/poi-bin-4.1.0-20190412/poi-4.1.0/poi-ooxml-schemas-4.1.0.jar"/>
 	<classpathentry kind="lib" path="H:/Testing/poi-bin-4.1.0-20190412/poi-4.1.0/poi-scratchpad-4.1.0.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/extentreports-4.0.9.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/bson-3.3.0.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/mongodb-driver-3.3.0.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/mongodb-driver-core-3.3.0.jar"/>
+	<classpathentry kind="lib" path="H:/Testing/extentreports-4.0.9/dependency/testng-6.9.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
